<resources>
    <string name="app_name">Admision</string>
    <string name="google_maps_key">AIzaSyBI7ducwc3o2geaLZYjblJgulQoquPMzyE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="connection_title">No Internet connection</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>
    <string name="location_title">Location Service disabled</string>
    <string name="location_msg">Please enable location service. Location is mandatory to use this application.</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_settings">Settings</string>
    <string name="connected">Connected&#8230;</string>
    <string name="retrying">Retrying&#8230; %s</string>
    <string name="btn_ok">OK</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="skip_login">Skip Login</string>
    <string name="btn_signup">Sign up</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_company">Company Name</string>
    <string name="hint_business">Business Type</string>
    <string name="hint_country">Country</string>
    <string name="btn_swt_seller">SWITCH TO SELLER MODE</string>
    <string name="btn_swt_buyer">SWITCH TO BUYER MODE</string>
    <string name="lab_shape">Shape</string>
    <string name="lab_size">Size</string>
    <string name="lab_color">Color</string>
    <string name="hint_intensity">Intensity</string>
    <string name="hint_overtone">Overtone</string>
    <string name="hint_color">Color</string>
    <string name="color_white">White</string>
    <string name="color_fancy">Fancy</string>

    <string name="err_email">Enter email address</string>
    <string name="err_email_invalid">Invalid email address</string>
    <string name="err_password">Enter password</string>
    <string name="err_conf_password">Confirm password</string>
    <string name="err_password_limit">Password must be at least 5 characters long</string>
    <string name="err_password_match">Password does not match</string>
    <string name="failed">Failed</string>
    <string name="hint_username">Username</string>
    <string name="hint_clarity">Clarity</string>
    <string name="hint_cut">Cut</string>
    <string name="hint_polish">Polish</string>
    <string name="hint_symmetry">Symmetry</string>
    <string name="hint_lab">Lab</string>
    <string name="exit_msg">Press Back twice to exit</string>
    <string name="err_firstname">Enter FirstName</string>
    <string name="err_lastname">Enter LastName</string>
    <string name="err_company_name">Enter Company Name</string>
    <string name="err_busine_type">Select business type</string>
    <string name="err_country">Select Country</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="hint_search_company">Search By Company</string>
    <string name="hint_fluorescence">Fluorescence</string>
    <string name="rap">Rap ($)</string>
    <string name="target_price">Target Price ($)</string>
    <string name="discount">Discount %</string>
    <string name="per_carat">$/Crt</string>
    <string name="total_price">Total Price ($)</string>
    <string name="color_">Color :</string>
    <string name="head_total">Total</string>
    <string name="loading">Loading...</string>
    <string name="head_total_crt">Total Crt</string>
    <string name="head_avg_crt">Avg Rap $/Crt</string>
    <string name="head_avg_price_crt">Avg $/Crt</string>
    <string name="head_total_price">Total $</string>
    <string name="menu_home">Home</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="dt_shape">Shape</string>
    <string name="dt_table">Table (%)</string>
    <string name="dash">-</string>
    <string name="menu_myconnection">My Connections</string>
    <string name="btn_delete">Delete</string>
    <string name="hint_search">Search</string>
    <string name="hint_group">Group</string>
    <string name="title_contacts">Contacts</string>
    <string name="head_selected">Selected</string>
    <string name="removed">Removed</string>
    <string name="menu_contact_req">Contact Requests</string>
    <string name="tab_req_pending">Pending</string>
    <string name="tab_req_sent">Sent</string>
    <string name="tab_req_blocked">Blocked</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_block">Block</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_search_stock">Search Stock</string>
    <string name="done">Done</string>
    <string name="are_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="btn_send_request">Send Request</string>
    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="err_username">Enter Username</string>
    <string name="err_badge">Enter Badge Number</string>
    <string name="err_pin">Enter 4 digit PIN</string>
    <string name="err_valid_pin">Enter Valid PIN</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="start_date_time"><![CDATA[Start Date & Time]]></string>
    <string name="end_date_time"><![CDATA[End Date & Time]]></string>
    <string name="click_here"><u>Click here</u></string>
    <string name="age_requirement">Age Requirement :</string>
    <string name="buy_now">Buy Now</string>
    <string name="interested">Interested ?</string>
    <string name="Advertisement">Advertisement</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_show_event">SHOW EVENT</string>
    <string name="attending">Attending</string>
</resources>
