<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.common.view.CTextView
            android:id="@+id/dialogtitle"
            style="@style/txt_fff_18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/app_name" />

    </LinearLayout>


    <ListView
        android:id="@+id/lvSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/list_devider"
        android:dividerHeight="1px"
        android:fadingEdge="none"
        android:fastScrollAlwaysVisible="false"
        android:fastScrollEnabled="true"
        android:listSelector="@color/gray_light__"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:listitem="@layout/spinner_sel_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.common.view.CButtonViewM
            android:id="@+id/btnNegative"
            style="@style/LightFlatWaveColorButtonRippleStyle_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/gray_light_"
            android:text="@string/btn_cancel"
            android:textColor="@color/white" />

        <com.common.view.CButtonViewM
            android:id="@+id/btnPositive"
            style="@style/LightFlatWaveColorButtonRippleStyle_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary"
            android:text="@string/btn_ok"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>