<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:src="@mipmap/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="30dp"-->
            <!--android:background="@color/primary" />-->

            <!--<android.support.v7.widget.CardView-->
            <!--android:id="@+id/card_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--app:cardBackgroundColor="@color/white"-->
            <!--app:cardCornerRadius="0dp"-->
            <!--app:cardElevation="4dp"-->
            <!--app:cardPreventCornerOverlap="true"-->
            <!--app:cardUseCompatPadding="true"-->
            <!--app:contentPadding="10dp">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <!--<android.support.design.widget.TextInputLayout-->
                <!--style="@style/TextAppearence.App.TextInputLayout_"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintAnimationEnabled="true"-->
                <!--app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_">-->

                <!--<com.common.view.CEditTextView-->
                <!--android:id="@+id/editLoginEmail"-->
                <!--style="@style/txt_333_16"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/squere_edittext"-->
                <!--android:drawableLeft="@drawable/ic_person_black_24dp"-->
                <!--android:drawablePadding="10dp"-->
                <!--android:hint="Email Id"-->
                <!--android:inputType="text"-->
                <!--android:padding="5dp"-->
                <!--android:singleLine="true"-->
                <!--android:textCursorDrawable="@null" />-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <com.common.view.CTextView
                    style="@style/txt_666_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="Email Id" />

                <com.common.view.CEditTextView
                    android:id="@+id/editLoginEmail"
                    style="@style/txt_333_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/squere_edittext"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

                <!--android:drawableLeft="@drawable/ic_person_black_24dp"-->
                <!--android:drawablePadding="10dp"-->

                <!--<android.support.design.widget.TextInputLayout-->
                <!--style="@style/TextAppearence.App.TextInputLayout_"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--app:hintAnimationEnabled="true"-->
                <!--app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout_">-->

                <!--<com.common.view.CEditTextView-->
                <!--android:id="@+id/editLoginPass"-->
                <!--style="@style/txt_333_16"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:background="@drawable/squere_edittext"-->
                <!--android:drawableLeft="@drawable/ic_https_black_24dp"-->
                <!--android:drawablePadding="10dp"-->
                <!--android:hint="Password"-->
                <!--android:inputType="textPassword"-->
                <!--android:padding="5dp"-->
                <!--android:singleLine="true"-->
                <!--android:textCursorDrawable="@null" />-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <com.common.view.CTextView
                    style="@style/txt_666_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:text="Password" />

                <com.common.view.CEditTextView
                    android:id="@+id/editLoginPass"
                    style="@style/txt_333_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/squere_edittext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

                <!--android:drawableLeft="@drawable/ic_https_black_24dp"-->
                <!--android:drawablePadding="10dp"-->

                <com.common.view.CBButtonViewM
                    android:id="@+id/btnLogin"
                    style="@style/LightFlatWaveColorButtonRippleStyle_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_bg_accept"
                    android:text="@string/btn_login"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <!--<com.common.view.CTextView-->
                    <!--android:id="@+id/tvForgotPass"-->
                    <!--style="@style/txt_666_14"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:singleLine="true"-->
                    <!--android:text="@string/forgot_password" />-->

                    <!--<View-->
                    <!--android:layout_width="1dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@color/col_333" />-->

                    <com.common.view.CTextView
                        android:id="@+id/tvForgotPassword"
                        style="@style/txt_666_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="@string/forgot_password" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.common.view.CTextView
                        android:id="@+id/tvNewAdmision"
                        style="@style/txt_666_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="New to Admision?" />


                    <com.common.view.CBButtonViewM
                        android:id="@+id/btnRegister"
                        style="@style/LightFlatWaveColorButtonRippleStyle_"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_bg_accept"
                        android:text="REGISTER HERE"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>
            <!--</android.support.v7.widget.CardView>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/col_666" />

            <com.common.view.CTextView
                style="@style/txt_666_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/col_666" />
        </LinearLayout>

        <com.common.view.CTextView
            style="@style/txt_theme_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/skip_login"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>